--- a/index.html
+++ b/index.html
@@ -12,27 +12,42 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
-  <ul>
-    <li>
-      <span class="fa fa-beer"></span>
-      <p>Grab a Beer</p>
-    </li>
-    <li>
-      <span class="fa fa-code"></span>
-      <p>Write Some Code</p>
-    </li>
-    <li>
-      <span class="fa fa-refresh"></span>
-      <p>Repeat</p>
-    </li>
-  </ul>
+  <header class="site-header" role="banner">
+    <div class="container">
+      <a class="site-brand">
+        // syntaqx
+      </a>
+      <ul class="site-header-nav">
+        <li><a href="https://twitter.com/syntaqx"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a href="https://www.facebook.com/syntaqx"><i class="fa fa-facebook"></i> Facebook</a></li>
+        <li><a href="https://github.com/syntaqx"><i class="fa fa-github"></i> GitHub</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <div class="main-container" role="main">
+    <ul>
+      <li>
+        <span class="fa fa-beer"></span>
+        <p>Grab a Beer</p>
+      </li>
+      <li>
+        <span class="fa fa-code"></span>
+        <p>Write Some Code</p>
+      </li>
+      <li>
+        <span class="fa fa-refresh"></span>
+        <p>Repeat</p>
+      </li>
+    </ul>
+  </div>
 
   <!-- scripts; concatenated and minified -->
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
   <!-- end styles -->
 
   <script>
