added terminal icon instead of //

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="site-header" role="banner">
     <div class="container">
       <a class="site-brand">
-        // syntaqx
+        <i class="fa fa-terminal"></i> syntaqx
       </a>
       <ul class="site-header-nav">
         <li><a href="https://twitter.com/syntaqx"><i class="fa fa-twitter"></i> Twitter</a></li>
