added more social icons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       </a>
       <ul class="site-header-nav">
         <li><a href="https://twitter.com/syntaqx"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a href="http://www.youtube.com/syntaqx"><i class="fa fa-youtube"></i> YouTube</a></li>
         <li><a href="https://www.facebook.com/syntaqx"><i class="fa fa-facebook"></i> Facebook</a></li>
+        <li><a href="http://www.linkedin.com/in/chasehutchins"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+        <li><a href="http://careers.stackoverflow.com/syntaqx"><i class="fa fa-stack-overflow"></i> Stack Overflow</a></li>
         <li><a href="https://github.com/syntaqx"><i class="fa fa-github"></i> GitHub</a></li>
       </ul>
     </div>
