--- a/index.html
+++ b/index.html
@@ -1,65 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+---
+layout: default
+title: Chase Hutchins
+---
 
-  <title>syntaqx - Home of Chase Hutchins</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<section class="articles">
 
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="/css/main.css">
-</head>
-<body>
-
-  <header class="site-header" role="banner">
-    <div class="container">
-      <a class="site-brand">
-        <i class="fa fa-terminal"></i> syntaqx
-      </a>
-      <ul class="site-header-nav">
-        <li><a href="https://twitter.com/syntaqx"><i class="fa fa-twitter"></i> Twitter</a></li>
-        <li><a href="https://www.facebook.com/syntaqx"><i class="fa fa-facebook"></i> Facebook</a></li>
-        <li><a href="https://github.com/syntaqx"><i class="fa fa-github"></i> GitHub</a></li>
-        <li><a href="http://careers.stackoverflow.com/syntaqx"><i class="fa fa-pencil-square"></i> Resume</a></li>
-        <li><a href="mailto:syntaqx@gmail.com"><i class="fa fa-envelope"></i> Contact Me</a></li>
-      </ul>
-    </div>
+  <header class="page-header">
+    <h1>Articles</h1>
   </header>
 
-  <div class="main-container" role="main">
-    <ul>
-      <li>
-        <span class="fa fa-beer"></span>
-        <p>Grab a Beer</p>
-      </li>
-      <li>
-        <span class="fa fa-code"></span>
-        <p>Write Some Code</p>
-      </li>
-      <li>
-        <span class="fa fa-refresh"></span>
-        <p>Repeat</p>
-      </li>
-    </ul>
-  </div>
+{% for post in site.posts %}
 
-  <!-- scripts; concatenated and minified -->
-  <script src="/js/main.js"></script>
-  <!-- end styles -->
+  <article class="article">
+    <header>
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <time>{{ post.date | date: "%B %e, %Y" }}</time>
+    </header>
+  </article>
 
-  <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-48212212-1');ga('send','pageview');
-  </script>
 
-</body>
-</html>
+{% endfor %}
+
+</section>
