adding twitter for the lawls

--- a/show-you.html
+++ b/show-you.html
@@ -5,6 +5,12 @@
     <meta name="description" content="A story of lies.">
 
     <meta name="twitter:card" value="I told you, you don't know. - A story of lies">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@syntaqx">
+    <meta name="twitter:title" content="I told you, you don't know">
+    <meta name="twitter:description" content="A story of lies">
+    <meta name="twitter:creator" content="@syntaqx">
+    <meta name="twitter:image" content="http://syntaqx.com/img/lawl.jpg">
 
     <meta property="og:title" content="I told you, you don't know.">
     <meta property="og:type" content="article">
@@ -16,6 +22,9 @@
 
     <h1>I told you, you don't know</h1>
     <p>A story of lies</p>
+
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="syntaqx">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
   </body>
 </html>
