--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>- ooops! -</title>
-<link rel="stylesheet" href="css/404.css">
+  <title>- ooops! -</title>
+  <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <p>Press CTRL+ALT+DEL to restart your computer. If you do this, you will lose any unsaved information in all open applications</p>
     <p>Error: O3 : 016F : BFF9B3D4</p>
 
-    <p><center>Press any key to continue _</center></p>
+    <p><center>Press any key to continue <span class="blink">_</span></center></p>
 
   </div>
 
