--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>- ooops! -</title>
+  <title>Error 404: Page not found</title>
   <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
