massive refactoring, more to come

--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
 ---
-layout: default
-title: Chase Hutchins
+layout: home
 ---
-
-<div class="container">
-
-  <ul class="recent-posts">
-  {% for post in site.posts %}
-    <li>
-        <a href="{{ post.url | relative_url }}">
-          <div>
-            <span class="title">{{ post.title }}</span>
-            <span class="date">{{ post.date | date: "%B %e, %Y" }}</span>
-          </div>
-        </a>
-      </li>
-  {% endfor %}
-  </ul>
-
-</div>
