--- a/404.html
+++ b/404.html
@@ -1,22 +1,1 @@
-<html>
-<head>
-  <title>Error 404: Page not found</title>
-  <link rel="stylesheet" href="css/404.css">
-</head>
-<body>
-
-  <div class="container">
-
-    <h1>Windows</h1>
-
-    <p>An error has occurred. To continue:</p>
-    <p>Press ENTER to return to Windows, or</p>
-    <p>Press CTRL+ALT+DEL to restart your computer. If you do this, you will lose any unsaved information in all open applications</p>
-    <p>Error: O3 : 016F : BFF9B3D4</p>
-
-    <p><center>Press any key to continue <span class="blink">_</span></center></p>
-
-  </div>
-
-</body>
-</html>
+<p>Page not found..</p>
