calling it good for the night.. getting some progress though!

--- a/404.html
+++ b/404.html
@@ -1,1 +1,8 @@
-<p>Page not found..</p>
+---
+layout: none
+sitemap: false
+---
+
+<h1>404</h1>
+<p><strong>Page not found :(</strong></p>
+<p>The requested page could not be found.</p>
