--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,13 +5,11 @@ tagline: >
   Have questions? I might have answers.
 ---
 
-<p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
-
 <div class="row justify-content-md-center">
   <div class="col col-md-6">
     <div class="card">
       <div class="card-body">
-        <form id="contact-form" method="post" action="" role="form">
+        <form id="contact-form" method="post" action="/contact" role="form">
           <fieldset class="form-group">
             <label for="inputName">Name</label>
             <input type="text" class="form-control" id="inputName" name="name">
