license body align text

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -8,7 +8,7 @@ title: License
   <div>
     <h1>The MIT License (MIT)</h1>
     <p><strong>Copyright (c) {% include time.html datetime=site.time format="%Y" %} Chase Hutchins &lt;syntaqx@gmail.com&gt;</strong></p>
-    <div class="license-text">
+    <div class="license-body">
       <p>Permission is hereby granted, free of charge, to any person obtaining a copy of
       this software and associated documentation files (the "Software"), to deal in
       the Software without restriction, including without limitation the rights to
