removing some of the extra shit, its not needed

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -24,10 +24,6 @@ title: License
       IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
       CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
     </div>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="{{ '/' | absolute_url }}" class="btn btn-lg btn-outline-secondary">Visit syntaqx.com</a></li>
-      <li class="list-inline-item mx-2"><span class="text-muted">or</span></li>
-      <li class="list-inline-item"><a href="https://github.com/syntaqx" class="btn btn-lg btn-outline-secondary">GitHub/syntaqx</a></li>
-    </ul>
+    <p><a href="{{ '/' | absolute_url }}" class="btn btn-outline-secondary">Return to Site</a></p>
   </div>
 </div>
