trim all the stuff that I dont bother updating

--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
----
+<!doctype html>
+<html class="no-js" lang="">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>syntaqx - Chase Hutchins</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <div class="center">
+    <div>
+      <p>Hello! I really should update this one day.</p>
+      <ul class="list-unstyled">
+        <li class="list-unstyled-item"><a href="https://github.com/syntaqx"><i class="fab fa-github"></i> GitHub</a></li>
+        <li class="list-unstyled-item"><a href="https://www.linkedin.com/in/syntaqx/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+        <li class="list-unstyled-item"><a href="https://twitter.com/syntaqx"><i class="fab fa-twitter"></i> Twitter</a></li>
+        <li class="list-unstyled-item"><a href="https://twitter.com/syntaqx"><i class="far fa-file"></i> Resume</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <script src="js/main.js"></script>
+
+  <script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+
+</body>
+</html>
