real resume link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li class="list-unstyled-item"><a href="https://github.com/syntaqx"><i class="fab fa-github"></i> GitHub</a></li>
         <li class="list-unstyled-item"><a href="https://www.linkedin.com/in/syntaqx/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
         <li class="list-unstyled-item"><a href="https://twitter.com/syntaqx"><i class="fab fa-twitter"></i> Twitter</a></li>
-        <li class="list-unstyled-item"><a href="https://twitter.com/syntaqx"><i class="far fa-file"></i> Resume</a></li>
+        <li class="list-unstyled-item"><a href="https://docs.google.com/document/d/1LNkRdMMHmTMPAPamT5x6ZxT8Mzn6w_q6TWT3J16Frtg/edit?usp=sharing"><i class="far fa-file"></i> Resume</a></li>
       </ul>
     </div>
   </div>
