blow away old crappy - the worst site ever

--- a/index.html
+++ b/index.html
@@ -1,45 +1,24 @@
-<!doctype html>
-<html class="no-js" lang="">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+---
+layout: default
+---
 
-  <title>syntaqx - Chase Hutchins</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <div class="center">
-    <div>
-      <p>Hello! I really should update this one day.</p>
-      <ul class="list-unstyled">
-        <li class="list-unstyled-item"><a href="https://github.com/syntaqx"><i class="fab fa-github"></i> GitHub</a></li>
-        <li class="list-unstyled-item"><a href="https://www.linkedin.com/in/syntaqx/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-        <li class="list-unstyled-item"><a href="https://twitter.com/syntaqx"><i class="fab fa-twitter"></i> Twitter</a></li>
-        <li class="list-unstyled-item"><a href="https://docs.google.com/document/d/1LNkRdMMHmTMPAPamT5x6ZxT8Mzn6w_q6TWT3J16Frtg/edit?usp=sharing"><i class="far fa-file"></i> Resume</a></li>
-      </ul>
+<header class="jumbotron jumbotron-fluid flex-shrink-0">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6 order-md-1 text-left">
+        <h1>Hey there, I'm <span class="heading-background-primary">Chase Pierce</span>.</h1>
+        <p class="lead mb-0">There's not much here right now, but maybe eventually?</p>
+      </div>
+      <div class="col-7 mx-auto col-md-6 order-md-2">
+      </div>
     </div>
   </div>
+</header>
 
-  <script src="js/main.js"></script>
+<main role="main" class="main-container">
+  <div class="container">
 
-  <script>
-  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <p>Hello, World!</p>
 
-</body>
-</html>
+  </div>
+</main>
