--- a/404.html
+++ b/404.html
@@ -1,18 +1,24 @@
 ---
 layout: baseof
 title: Not Found
-permalink: /404.html
+permalink: 404.html
 ---
 
-<header>
-  <img src="{{ 'assets/img/logo.svg' | relative_url }}" height="50">
-</header>
-
-<div class="container">
-  <img src="{{ 'assets/img/icons/undraw_page_not_found_su7k.svg' | relative_url }}" class="img-fluid">
-  <h1 class="display-4">Not Found</h1>
-  <p class="lead">It appears we've run into one of those rare occurences where the page you are looking for was moved, removed, renamed, or may never have existed.</p>
-  <p>
-    <a href="#" class="btn btn-primary">Return home</a>
-  </p>
+<div class="flex my-auto">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <div class="text-center">
+          <div class="mb-5">
+            <img src="{{ 'assets/img/icons/undraw_page_not_found_su7k.svg' | relative_url }}" class="img-fluid">
+          </div>
+          <h1 class="display-4">Not Found</h1>
+          <p class="lead">It seems you've wandered off a bit.. Whatever it was you were looking for was moved, deleted, or might possibly have never existed at all.. there's no way of knowing</p>
+          <p>
+            <a href="/" class="btn btn-lg btn-primary">Return home</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
