--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@ layout: default
 
 <header class="jumbotron jumbotron-fluid flex-shrink-0">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6 order-md-1 text-left">
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <h1 class="display-1">¯\_(ツ)_/¯</h1>
         <h1>Hey there, I'm <span class="heading-background-primary">Chase Pierce</span>.</h1>
         <p class="lead mb-0">There's not much here right now, but maybe eventually?</p>
-      </div>
-      <div class="col-7 mx-auto col-md-6 order-md-2">
       </div>
     </div>
   </div>
@@ -18,7 +17,7 @@ layout: default
 <main role="main" class="main-container">
   <div class="container">
 
-    <p>Hello, World!</p>
+    <p>Hello, World! Feel free to browse, but there's really not much going on.</p>
 
   </div>
 </main>
